--- a/src/styles/Productos.css
+++ b/src/styles/Productos.css
@@ -36,6 +36,9 @@
 }
 
 .descripcionProductos {
+  background-color: #accc47;
+  width: 100%;
+  height: 600px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -44,13 +47,12 @@
 .cardDescription {
   margin: 10px;
   width: 200px;
-  background-color: #accc47;
   border-radius: 10px;
+  color: white;
 }
 .cardDescription h4 {
   margin-bottom: 0;
   padding: 10px;
-  text-align: center;
 }
 .cardDescription ul {
   list-style: none;
