--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ h2 {
 }
 
 #quienessomos {
+  margin-top: 30px;
   display: flex;
   align-items: center;
   height: 100dvh;
@@ -35,13 +36,13 @@ h2 {
 }
 
 #socios {
+  margin-top: 30px;
   background-color: #accc47;
 }
 #socios h2 {
   color: white;
   padding-top: 32px;
-  margin-top: 0;
-  margin-left: 40px;
+  margin: 0 0 0 40px;
 }
 #socios article {
   display: flex;
@@ -49,7 +50,7 @@ h2 {
   flex-wrap: wrap;
 }
 #socios img {
-  max-width: 300px;
+  max-width: 250px;
 }
 
 
